--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -9,11 +9,8 @@ on:
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -21,6 +18,20 @@ jobs:
       with:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
+    - run: flutter packages pub run build_runner build
     - run: flutter pub get
     - run: flutter test
     - run: flutter build apk
+
+  build-ios:
+    runs-on: macos-latest
+    steps:
+    - uses: actions/checkout@v2
+    - uses: actions/setup-java@v1
+      with:
+        java-version: '12.x'
+    - uses: subosito/flutter-action@v1
+    - run: flutter packages pub run build_runner build
+    - run: flutter pub get
+    - run: flutter test
+    - run: flutter build ios --release --no-codesign
