--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -18,6 +18,7 @@ jobs:
       with:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
+    - run: flutter packages pub get
     - run: flutter packages pub run build_runner build
     - run: flutter pub get
     - run: flutter test
@@ -31,6 +32,7 @@ jobs:
       with:
         java-version: '12.x'
     - uses: subosito/flutter-action@v1
+    - run: flutter packages pub get
     - run: flutter packages pub run build_runner build
     - run: flutter pub get
     - run: flutter test
