--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -10,19 +10,33 @@ on:
   workflow_dispatch:
 
 jobs:
-  build:
+  build-android:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
     - uses: actions/setup-java@v1
       with:
         java-version: '12.x'
+    
+    - name: Cache Flutter dependencies
+    - uses: actions/cache@v2
+      with:
+        path: /opt/hostedtoolcache/flutter
+        key: ${{ runner.OS }}-flutter-install-cache
     - uses: subosito/flutter-action@v1
+    
+    - name: Cache pub dependencies
+    - uses: actions/cache@v2
+      with:
+        path: ${{ env.FLUTTER_HOME }}/.pub-cache
+        key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
+        restore-keys: ${{ runner.os }}-pub-
+
     - run: flutter packages pub get
     - run: flutter packages pub run build_runner build
     - run: flutter pub get
 #    - run: flutter test
-    - run: flutter build apk
+    - run: flutter build apk --debug
 
   build-ios:
     runs-on: macos-latest
