--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -19,14 +19,14 @@ jobs:
         java-version: '12.x'
     
     - name: Cache Flutter dependencies
-    - uses: actions/cache@v2
+      uses: actions/cache@v2
       with:
         path: /opt/hostedtoolcache/flutter
         key: ${{ runner.OS }}-flutter-install-cache
     - uses: subosito/flutter-action@v1
     
     - name: Cache pub dependencies
-    - uses: actions/cache@v2
+      uses: actions/cache@v2
       with:
         path: ${{ env.FLUTTER_HOME }}/.pub-cache
         key: ${{ runner.os }}-pub-${{ hashFiles('**/pubspec.lock') }}
